# libgts

./: .gitignore  CMakeLists.txt
Analyzer/: AnalysisChroma.cc  AnalysisChroma.h  IIR-Filter.cc  IIR-Filter.h
Classifier/: ChordClassifier.cc  ChordClassifier.h  ChordLibrary.cc  ChordLibrary.h
Document/: Report.docx
JNI/: JNI.cc  JNI.java  Makefile  com_libgts_JNI.h  pom.xml
Scripts/: plot.m
Testcases/: CMakeLists.txt  testcase-analyzer.cc  testcase-classifier.cc
include/: gts_error.h
